fix z-index issues

--- a/static/base.css
+++ b/static/base.css
@@ -87,6 +87,11 @@ html, body {
     display: flex;
     flex-direction: column;
     transition: width 0.2s ease-in-out;
+    z-index: 5;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
 }
 .sidebar-space {
     flex-grow: 2;
@@ -263,4 +268,5 @@ html, body {
     background-color: rgba(255, 255, 255, 0.1);
     position: fixed;
     display: block;
+    z-index: 1;
 }
